[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Start_Menu.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 147.0
margin_top = 200.0
margin_right = 330.0
margin_bottom = 268.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="create_room" type="Button" parent="VBoxContainer"]
margin_right = 183.0
margin_bottom = 20.0
text = "Create chat room"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join_room" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 183.0
margin_bottom = 44.0
text = "Join chat room"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join_dialog" type="VBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 48.0
margin_right = 183.0
margin_bottom = 124.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lobby_id" type="LineEdit" parent="VBoxContainer/join_dialog"]
margin_right = 183.0
margin_bottom = 24.0

[node name="lobby_secret" type="LineEdit" parent="VBoxContainer/join_dialog"]
margin_top = 28.0
margin_right = 183.0
margin_bottom = 52.0

[node name="Button" type="Button" parent="VBoxContainer/join_dialog"]
margin_top = 56.0
margin_right = 183.0
margin_bottom = 76.0
text = "Join"

[node name="search_room" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 183.0
margin_bottom = 68.0
text = "Search chat rooms"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 501.405
margin_top = 81.0833
margin_right = 865.405
margin_bottom = 387.083
text = "This programm is the result of a tutorial series on how to implement Godotcord into a Godot project.
This is a simple chat program to send messages from peer A to peer B. The functions Godotcord functions used are:
- GodotcordActivityManager
- NetworkedMultiplayerGodotcord
- GodotcordLobbyManager"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
